# VTOL_sim

./: README.md  frames_2026-06-01_02.31.38.gv  frames_2026-06-01_02.33.13.gv  frames_2026-06-01_02.34.14.gv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/sensor_simulator/lib/sensor_simulator/: sensor_simulator_node  state_estimator_node
install/sensor_simulator/share/sensor_simulator/: package.sh  package.xml
install/state_estimator/lib/state_estimator/: state_estimator_node
install/state_estimator/share/state_estimator/: package.ps1  package.sh  package.xml
install/vtol_controller/lib/vtol_controller/: controller_node  thrust_allocator
install/vtol_controller/share/vtol_controller/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/vtol_description/share/vtol_description/: local_setup.sh  package.ps1  package.sh  package.xml
install/vtol_description/share/vtol_description/launch/: display.launch.py  gazebo.launch.py
install/vtol_description/share/vtol_description/meshes/: body.STL  motor1.STL  motor2.STL  rack_n_pinion2.STL
install/vtol_description/share/vtol_description/rviz/: display.rviz
install/vtol_dynamics/lib/vtol_dynamics/: vtol_dynamics_node
install/vtol_dynamics/share/vtol_dynamics/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/vtol_gazebo_plugins/share/vtol_gazebo_plugins/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/vtol_planner/lib/vtol_planner/: circle_trajectory  planner_node  trajectory_visualizer  transition_trajectory
install/vtol_planner/share/vtol_planner/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/vtol_planner/share/vtol_planner/launch/: planner.launch.py  vtol_sim.launch.py
install/vtol_planner/share/vtol_planner/rviz/: planner.rviz
install/vtol_plant/lib/vtol_plant/: estimated_state_visualizer  odom_tf_broadcaster  plant_node  state_visualizer
install/vtol_plant/share/vtol_plant/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/vtol_testbench/lib/vtol_testbench/: manual_input
install/vtol_testbench/share/vtol_testbench/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/sensor_simulator/: setup.py
src/sensor_simulator/sensor_simulator/: sensor_simulator_node.py
src/state_estimator/: setup.py
src/state_estimator/state_estimator/: state_estimator_node.py
src/vtol_controller/: setup.py
src/vtol_controller/config/: controllers.yaml
src/vtol_controller/vtol_controller/: controller_node.py  controller_parameters.py  feedback_linearization.py
src/vtol_description/: CMakeLists.txt
src/vtol_description/meshes/: fixed_wing_propeller.STL  motor3.STL  motor4.STL  rack_n_pinion1.STL
src/vtol_description/urdf/: vtol_controller.xacro  vtol_description.urdf.xacro  vtol_gazebo.xacro
src/vtol_description/worlds/: empty.sdf
src/vtol_dynamics/: package.xml  setup.cfg  setup.py
src/vtol_dynamics/vtol_dynamics/: vtol_dynamics_node.py
src/vtol_gazebo_plugins/: CMakeLists.txt
src/vtol_gazebo_plugins/src/: multicopter_motor_model.cpp
src/vtol_planner/: package.xml  setup.cfg  setup.py
src/vtol_planner/launch/: vtol_sim.launch.py
src/vtol_planner/vtol_planner/: trajectory_visualizer.py
src/vtol_plant/: package.xml  setup.cfg  setup.py
src/vtol_plant/vtol_plant/: allocator.py  estimated_state_visualizer.py  plant_node.py  state_visualizer.py
src/vtol_testbench/: package.xml  setup.cfg  setup.py
