<?xml version="1.0"?>

<?xml-model
href="http://download.ros.org/schema/package_format3.xsd"
schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

  <!-- ================================================== -->
  <!--                  PACKAGE INFO                      -->
  <!-- ================================================== -->

  <name>vtol_plant</name>

  <version>0.0.1</version>

  <description>

    Nonlinear VTOL UAV Plant Model

  </description>

  <maintainer email="sambhava06@gmail.com">

    asambhav

  </maintainer>

  <license>Apache-2.0</license>

  <!-- ================================================== -->
  <!--                BUILD TOOL                          -->
  <!-- ================================================== -->

  <buildtool_depend>

    ament_python

  </buildtool_depend>

  <!-- ================================================== -->
  <!--                ROS2 DEPENDENCIES                   -->
  <!-- ================================================== -->

  <depend>rclpy</depend>

  <depend>std_msgs</depend>

  <depend>geometry_msgs</depend>

  <depend>nav_msgs</depend>

  <!-- ================================================== -->
  <!--             PYTHON TRANSFORMATIONS                 -->
  <!-- ================================================== -->

  <exec_depend>python3-tf-transformations</exec_depend>

  <!-- ================================================== -->
  <!--                    TESTING                         -->
  <!-- ================================================== -->

  <test_depend>ament_flake8</test_depend>

  <test_depend>ament_pep257</test_depend>

  <test_depend>python3-pytest</test_depend>

  <!-- ================================================== -->
  <!--                    EXPORT                          -->
  <!-- ================================================== -->

  <export>

    <build_type>ament_python</build_type>

  </export>

</package>