<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
             schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

  <name>vtol_controller</name>

  <version>0.0.0</version>

  <description>
    VTOL flight controller package for ROS2 and Gazebo simulation
  </description>

  <maintainer email="sambhava06@gmail.com">
    asambhav
  </maintainer>

  <license>Apache-2.0</license>

  <!-- ====================================================== -->
  <!--                    BUILD TOOL                          -->
  <!-- ====================================================== -->

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ====================================================== -->
  <!--                    ROS2 DEPENDENCIES                   -->
  <!-- ====================================================== -->

  <depend>rclpy</depend>

  <depend>std_msgs</depend>

  <depend>sensor_msgs</depend>

  <depend>geometry_msgs</depend>

  <depend>nav_msgs</depend>

  <depend>trajectory_msgs</depend>

  <!-- ====================================================== -->
  <!--                ROS2 CONTROL DEPENDENCIES              -->
  <!-- ====================================================== -->

  <depend>controller_manager</depend>

  <depend>joint_state_broadcaster</depend>

  <depend>joint_trajectory_controller</depend>

  <depend>velocity_controllers</depend>

  <depend>position_controllers</depend>

  <depend>ros2controlcli</depend>

  <!-- ====================================================== -->
  <!--                  GAZEBO CONTROL                        -->
  <!-- ====================================================== -->

  <depend>gz_ros2_control</depend>

  <!-- ====================================================== -->
  <!--                      TF / TOOLS                        -->
  <!-- ====================================================== -->

  <depend>tf2_ros</depend>

  <!-- ====================================================== -->
  <!--                    TEST DEPENDENCIES                   -->
  <!-- ====================================================== -->

  <test_depend>ament_copyright</test_depend>

  <test_depend>ament_flake8</test_depend>

  <test_depend>ament_pep257</test_depend>

  <test_depend>python3-pytest</test_depend>

  <!-- ====================================================== -->
  <!--                        EXPORT                          -->
  <!-- ====================================================== -->

  <export>

    <build_type>ament_python</build_type>

  </export>

</package>